Fixade dependancies, postinstall skript & portar.

--- a/package.json
+++ b/package.json
@@ -29,14 +29,13 @@
         "build": "gulp",
         "devbuild": "gulp devbuild",
         "clean": "rm -rf build",
-        "start": "node server.js"
+        "start": "node server.js",
+        "postinstall": "npm run build"
     },
     "dependencies": {
         "express": "^4.16.2",
         "react": "^16.1.0",
-        "react-dom": "^16.1.0"
-    },
-    "devDependencies": {
+        "react-dom": "^16.1.0",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.6.1",
