--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
         "webpack-stream": "^4.0.0",
         "mongodb": "^2.2.33",
         "crypto": "^1.0.1",
-        "mime": "^1.4.1"
+        "mime": "^1.4.1",
+        "websocket": "^1.0.25",
+        "express-ws": "^3.0.0"
     }
 }
