--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.6.1",
         "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-2": "^6.24.1",
         "gulp": "^3.9.1",
         "gulp-uglify": "^3.0.0",
         "vinyl-named": "^1.1.0",
